# conway-s-game-of-life

./: CMakeLists.txt  README.md
maps/: map1.txt
src/: Cell.cpp  Cell.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp  main.cpp
